cabal-version:      2.4
name:               editable-data-types
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Wei Wei
maintainer:         shazhouke@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Editable

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: MultiParamTypeClasses
    build-depends:    base ^>=4.16.4.0
                      , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable Main
    main-is:          Main.hs

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: MultiParamTypeClasses
    hs-source-dirs:   src
    build-depends:    base ^>=4.16.4.0
    default-language: Haskell2010

test-suite test-ReplaceSegment
    type:             exitcode-stdio-1.0
    main-is:          test-Replace.hs
    build-depends:    base ^>=4.16.4.0
                      , hspec
                      , random
                      , mtl
    default-language: Haskell2010
    hs-source-dirs:   test src
    other-modules:    Editable
                      , Editable.Core
                      , Editable.Properties
                      , Editable.List.Replace